impl deu_* function && bit_compare function...